--- a/Curs 1/ap1.html
+++ b/Curs 1/ap1.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
 <html>
-        Prima mea pagina HTML   
+        Prima mea pagina HTML 
+        <p id="2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed sequi molestiae laudantium commodi fugit vitae quam ullam veniam culpa! Reprehenderit est voluptate delectus et nisi fuga asperiores explicabo sapiente recusandae.</p>  
+
 </html>
